Revert "Fix dragoverlay flickering"

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
 :root {
   font-family: "Roboto", sans-serif;
 }
-/* sua flickering tam thoi */
-[data-dnd-overlay]:not([style*='--dnd-translate']) {
-  display: none;
-}
